--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <p data-output> вывод <span> </span></p>
+    <!-- <p data-output> вывод <span> </span></p> -->
     <!-- <script src="./js/1.js" type="module"></script> -->
     <!-- <script src="./js/2-arrays.js"></script> -->
     <!-- <script src="./js/3-function.js" type="module"></script> -->
     <!-- <script src="./js/4-objects.js" type="module"></script> -->
     <!-- <script src="./js/5-object.js" type="module"></script> -->
-    <script src="./js/6-functionCallBack.js" type="module"></script>
+    <!-- <script src="./js/6-functionCallBack.js" type="module"></script> -->
+    <script src="./js/7-thisWord.js" type="module"></script>
 
 </body>
 
