--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
+    <img class="mage" src="./images/invoker.jpg" alt="invoker">
+    <img class="mage" src="./images/rubick.png" alt="rubick">
+
     <!-- <p data-output> вывод <span> </span></p> -->
     <!-- <script src="./js/1.js" type="module"></script> -->
     <!-- <script src="./js/2-arrays.js"></script> -->
@@ -16,7 +20,14 @@
     <!-- <script src="./js/4-objects.js" type="module"></script> -->
     <!-- <script src="./js/5-object.js" type="module"></script> -->
     <!-- <script src="./js/6-functionCallBack.js" type="module"></script> -->
-    <script src="./js/7-thisWord.js" type="module"></script>
+    <!-- <script src="./js/7-thisWord.js" type="module"></script> -->
+    <!-- <script src="./js/8-OOP.js" type="module"></script> -->
+    <!-- <script src="./js/battle.js" type="module"></script> -->
+    <!-- <script src="./js/sorting.js" type="module"></script> -->
+    <!-- <script src="./js/battle-mage.js" type="module"></script> -->
+    <!-- <script src="./js/MODUL_5.js" type="module"></script> -->
+    <!-- <script src="./js/MODUL_6.js" type="module"></script> -->
+
 
 </body>
 
