--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!-- <script src="./js/battle-mage.js" type="module"></script> -->
     <!-- <script src="./js/MODUL_5.js" type="module"></script> -->
     <!-- <script src="./js/MODUL_6.js" type="module"></script> -->
+    <!-- <script src="./js/codewars.js" type="module"></script> -->
+    <!-- <!-- <script src="./js/MODUL_node" type="module"></script> -->
+    <script src="./js/timer.js" type="module"></script>
 
 
 </body>
